k8s-files/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 4
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: k8sbackend
        image: ghcr.io/keithmendozasr/k8spractice/backend:release1
        imagePullPolicy: IfNotPresent
        ports:
        - name: "backendport"
          containerPort: 5000
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
  - name: "backendport"
    targetPort: "backendport"
    port: 5000
