k8s-files/postgresql.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: psqlserver
spec:
  replicas: 1
  selector:
    matchLabels:
      role: dbserver
  template:
    metadata:
      labels:
        role: dbserver
    spec:
      containers:
      - name: psqlserver
        image: postgres:12-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
          protocol: TCP
          name: psqlport
        volumeMounts:
        - name: psqldata
          mountPath: /mnt/permstore
      volumes:
      - name: psqldata
        persistentVolumeClaim:
          claimName: psqlpvc
          readOnly: false

---

apiVersion: v1
kind: Service
metadata:
  name: dbserver
spec:
  selector:
    role: dbserver
  ports:
  - port: 5432
    protocol: TCP
