k8s-files/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      role: redis
  template:
    metadata:
      labels:
        role: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        imagePullPolicy: IfNotPresent

---

apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    role: redis
  ports:
  - port: 6379
    protocol: TCP
